--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_captura_porcentaje.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_captura_porcentaje.xml
@@ -95,6 +95,7 @@
         android:layout_height="70dp"
         android:layout_gravity="center"
         style="@style/SagasTheme.Button"
+        android:background="@drawable/ripple_effect"
         android:text="@string/message_acept"
         android:textColor="@color/colorTextButtonLogin"
         android:textSize="25dp"
