--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_gas_lista.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_punto_venta_gas_lista.xml
@@ -86,7 +86,8 @@
             android:layout_gravity="center"
             android:layout_marginStart="8sp"
             android:layout_marginBottom="8sp"
-            android:backgroundTint="@color/colorButtonLogin"
+            style="@style/SagasTheme.Button"
+            android:background="@drawable/ripple_effect"
             android:gravity="center"
             android:text="@string/opciones"
             android:textAlignment="center"
@@ -104,10 +105,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="8dp"
-            android:backgroundTint="@color/colorButtonLogin"
             android:gravity="center"
             android:text="@string/agregar"
             android:textAlignment="center"
+            style="@style/SagasTheme.Button"
+            android:background="@drawable/ripple_effect"
             android:textColor="@color/colorTextButtonLogin"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +124,8 @@
             android:layout_gravity="center"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8sp"
-            android:backgroundTint="@color/colorButtonLogin"
+            style="@style/SagasTheme.Button"
+            android:background="@drawable/ripple_effect"
             android:gravity="center"
             android:text="@string/pagar"
             android:textAlignment="center"
