--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_registrar_papeleta.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_registrar_papeleta.xml
@@ -508,6 +508,7 @@
             <Button
                 android:id="@+id/registrar_button"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
                 android:layout_gravity="center"
@@ -523,6 +524,7 @@
             <Button
                 android:id="@+id/limpiar_button"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
