--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_reporte.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_reporte.xml
@@ -121,6 +121,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_weight="4"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:padding="15dp"
                 android:text="@string/Generar_reporte"
                 android:textColor="@color/colorTextButtonLogin"
