--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/campos_camionetas_footer.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/campos_camionetas_footer.xml
@@ -16,6 +16,7 @@
         android:layout_weight="1"
         android:textSize="30sp"
         android:text="@string/message_acept"
+        android:background="@drawable/ripple_effect"
         style="@style/SagasTheme.Button"
    />
     <!--tools:ignore="UnusedAttribute"
