--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_autoconsumo_inventario.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_autoconsumo_inventario.xml
@@ -68,10 +68,10 @@
                 android:layout_marginRight="85dp"
                 android:text="@string/message_acept"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="18sp"
                 tools:ignore="UnusedAttribute" />
-            <!--                android:backgroundTint="@color/colorButtonLogin" -->
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
