--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/campos_camionetas_footer.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/campos_camionetas_footer.xml
@@ -16,6 +16,7 @@
         android:layout_weight="1"
         android:text="@string/message_acept"
         style="@style/SagasTheme.Button"
+        android:background="@drawable/ripple_effect"
         android:textColor="@color/colorTextButtonLogin"
         android:textSize="18sp"
          />
