--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/header_buscar_cliente.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/header_buscar_cliente.xml
@@ -45,6 +45,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:text="@string/label_no"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="18sp"
@@ -57,6 +58,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:text="@string/label_si"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="18sp"
