--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_calibracion_pipa.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_calibracion_pipa.xml
@@ -98,6 +98,7 @@
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:textSize="30sp"
                 tools:ignore="UnusedAttribute" />
             <!--                android:backgroundTint="@color/colorButtonLogin"-->
