--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_camera_lectura.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_camera_lectura.xml
@@ -51,6 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:drawableStart="@mipmap/ic_camera"
+                android:background="@drawable/ripple_effect"
                 android:textColor="@color/textcolorButton"
                 android:text="@string/tomar_foto"
                 android:textSize="36sp" />
