--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_iniciar_descarga.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_iniciar_descarga.xml
@@ -17,7 +17,7 @@
             android:gravity="center"
             android:text="@string/title_iniciar_descarga"
             android:textColor="@color/colorTextLogin"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:textStyle="italic" />
 
 
@@ -36,7 +36,7 @@
             android:paddingRight="10dp"
             android:text="@string/spinner_num_compra"
             android:textColor="@color/colorTextLogin"
-            android:textSize="25dp" />
+            android:textSize="25sp" />
 
         <Spinner
             android:id="@+id/spinner_orden_compra"
@@ -46,7 +46,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:textColor="@color/colorTextLogin"
-            android:textSize="25dp" />
+            android:textSize="25sp" />
 
         <LinearLayout
             android:id="@+id/layout_tanque"
@@ -59,12 +59,12 @@
             android:paddingRight="10dp">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/tanque_prestado"
                 android:textColor="@color/colorTextLogin"
-                android:textSize="25dp" />
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/TvIniciarDescargaActivityNo"
@@ -73,7 +73,7 @@
                 android:layout_gravity="center"
                 android:text="@string/label_no"
                 android:textColor="@color/colorTextLogin"
-                android:textSize="25dp" />
+                android:textSize="25sp" />
 
             <Switch
                 android:id="@+id/switch_tanque"
@@ -88,7 +88,7 @@
                 android:layout_gravity="center"
                 android:text="@string/label_si"
                 android:textColor="@color/colorTextLogin"
-                android:textSize="25dp" />
+                android:textSize="25sp" />
 
         </LinearLayout>
 
@@ -107,7 +107,7 @@
                 android:layout_weight="1"
                 android:text="@string/tipo_medidor_tractor"
                 android:textColor="@color/colorTextLogin"
-                android:textSize="25dp" />
+                android:textSize="25sp" />
 
             <Spinner
                 android:id="@+id/spinner_medidor_tractor"
@@ -117,7 +117,7 @@
                 android:entries="@array/tipos_medidor"
                 android:paddingBottom="10dp"
                 android:textColor="@color/colorTextLogin"
-                android:textSize="25dp" />
+                android:textSize="25sp" />
 
         </LinearLayout>
 
@@ -136,7 +136,7 @@
                 android:layout_weight="1"
                 android:text="@string/tipo_medidor_almacen"
                 android:textColor="@color/colorTextLogin"
-                android:textSize="25dp" />
+                android:textSize="25sp" />
 
             <Spinner
                 android:id="@+id/spinner_medidor_almacen"
@@ -146,7 +146,7 @@
                 android:entries="@array/tipos_medidor"
                 android:paddingBottom="10dp"
                 android:textColor="@color/colorTextLogin"
-                android:textSize="30dp" />
+                android:textSize="30sp" />
 
         </LinearLayout>
 
@@ -193,11 +193,11 @@
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
             style="@style/SagasTheme.Button"
+            android:background="@drawable/ripple_effect"
             android:minWidth="170dp"
             android:text="@string/registrar"
             android:textColor="@color/colorTextButtonLogin"
             android:textSize="25sp" />
-    <!--            android:background="@color/colorButtonLogin"-->
     </LinearLayout>
 
 
