--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_lectura_almacen.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_lectura_almacen.xml
@@ -77,11 +77,11 @@
                 android:layout_marginRight="85dp"
                 android:layout_marginTop="15dp"
                 android:text="@string/message_acept"
+                android:background="@drawable/ripple_effect"
                 style="@style/SagasTheme.Button"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="30sp"
                 tools:ignore="UnusedAttribute" />
-            <!--                android:backgroundTint="@color/colorButtonLogin"-->
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
