--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_lectura_datos.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_lectura_datos.xml
@@ -84,12 +84,12 @@
                 android:layout_marginRight="85dp"
                 android:layout_marginBottom="15dp"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:padding="25sp"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="36sp"
                 tools:ignore="ObsoleteLayoutParam,UnusedAttribute" />
-<!--                android:backgroundTint="@color/colorButtonLogin-->
         </LinearLayout>
     </ScrollView>
 
