--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_main.xml
@@ -104,8 +104,7 @@
                         android:paddingBottom="15dp"
                         android:textSize="30sp"
                         tools:ignore="Autofill" />
-                    <!--android:textColor="@color/colorTextLogin"
-android:textColorHint="@color/colorTextLogin"-->
+
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
@@ -133,13 +132,12 @@ android:textColorHint="@color/colorTextLogin"-->
                         tools:ignore="Autofill"
 
                         />
-                    <!--android:textColor="@color/colorTextLogin"
-                        android:textColorHint="@color/colorTextLogin"-->
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
                     android:id="@+id/login_button"
                     style="@style/SagasTheme.Button"
+                    android:background="@drawable/ripple_effect"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -155,8 +153,7 @@ android:textColorHint="@color/colorTextLogin"-->
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />
-                <!--android:background="@color/colorButtonLogin"
-                    android:textColor="@color/colorTextButtonLogin"-->
+
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.CardView>
