--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_registro_cliente.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_registro_cliente.xml
@@ -181,6 +181,7 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="15dp"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:text="@string/regresar"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="24sp"
@@ -193,6 +194,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:text="@string/registrar_cliente"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="30sp"
