--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_venta_gas.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_venta_gas.xml
@@ -59,6 +59,7 @@
         <Button
             android:id="@+id/BtnVentaGasActivtiyCilindroConGas"
             style="@style/SagasTheme.Button"
+            android:background="@drawable/ripple_effect"
             android:layout_width="200sp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -76,6 +77,7 @@
         <Button
             android:id="@+id/BtnVentaGasActivityCilindro"
             style="@style/SagasTheme.Button"
+            android:background="@drawable/ripple_effect"
             android:layout_width="200sp"
             android:layout_height="99sp"
             android:layout_marginStart="16dp"
@@ -95,6 +97,7 @@
         <Button
             android:id="@+id/BtnVentaGasActivityOtros"
             style="@style/SagasTheme.Button"
+            android:background="@drawable/ripple_effect"
             android:layout_width="200sp"
             android:layout_height="99sp"
             android:layout_marginTop="8dp"
@@ -150,6 +153,7 @@
             android:layout_marginBottom="8dp"
             android:layout_weight="1"
             style="@style/SagasTheme.Button"
+            android:background="@drawable/ripple_effect"
             android:text="@string/pagar"
             android:textColor="@color/colorTextButtonLogin"
             android:textSize="24sp"
