--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_ver_reporte.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_ver_reporte.xml
@@ -40,6 +40,7 @@
                     android:drawableStart="@drawable/ic_go_back_dark"
                     android:text="@string/terminar"
                     style="@style/SagasTheme.Button"
+                    android:background="@drawable/ripple_effect"
                     android:textSize="30sp"
                     android:visibility="gone"
                     tools:ignore="ButtonStyle,UnusedAttribute" />
@@ -50,6 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     style="@style/SagasTheme.Button"
+                    android:background="@drawable/ripple_effect"
                     android:text="@string/imprimir_reporte"
                     android:textColor="@color/colorTextButtonLogin"
                     android:textSize="30sp"
