--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/formulario_venta_camioneta_y_pipa.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/formulario_venta_camioneta_y_pipa.xml
@@ -147,6 +147,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/ripple_effect"
         style="@style/SagasTheme.Button"
         android:text="@string/message_cancel"
         android:textColor="@color/colorTextButtonLogin"
@@ -162,6 +163,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         style="@style/SagasTheme.Button"
+        android:background="@drawable/ripple_effect"
         android:text="@string/pagar"
         android:textColor="@color/colorTextButtonLogin"
         android:textSize="24sp"
