--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_calibracion_estacion.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_calibracion_estacion.xml
@@ -76,6 +76,7 @@
                 android:layout_marginLeft="85dp"
                 android:layout_marginRight="85dp"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="24sp"
