--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_iniciar_descarga.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_iniciar_descarga.xml
@@ -194,6 +194,7 @@
             <Button
                 android:id="@+id/registrar_button"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
