--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_porcentaje_calibracion.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_porcentaje_calibracion.xml
@@ -119,12 +119,12 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:padding="15sp"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="24sp"
                 tools:ignore="UnusedAttribute" />
-            <!--                android:backgroundTint="@color/colorButtonLogin"-->
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
