--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_solicitar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_solicitar.xml
@@ -47,6 +47,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:text="@string/seguir_sin_numero"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="14sp"
@@ -71,6 +72,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:text="@string/registrar_cliente"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="14sp"
@@ -108,6 +110,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="15dp"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:text="@string/buscar_cliente"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="18sp"
