--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registro_cliente.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registro_cliente.xml
@@ -190,6 +190,7 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="15dp"
                 style="@style/SagasTheme.Button"
+                android:background="@drawable/ripple_effect"
                 android:text="@string/regresar"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="18sp"
@@ -197,11 +198,13 @@
 
             <Button
                 android:id="@+id/BtnRegistroClienteActivityRegistrarCliente"
+                style="@style/SagasTheme.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                style="@style/SagasTheme.Button"
+                android:layout_marginBottom="5sp"
+                android:background="@drawable/ripple_effect"
                 android:text="@string/registrar_cliente"
                 android:textColor="@color/colorTextButtonLogin"
                 android:textSize="18sp"
