--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_venta_gas.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_venta_gas.xml
@@ -40,6 +40,7 @@
     <Button
         android:id="@+id/BtnVentaGasActivityGasLp"
         style="@style/SagasTheme.Button"
+        android:background="@drawable/ripple_effect"
         android:layout_width="134dp"
         android:layout_height="68dp"
         android:layout_marginStart="16dp"
@@ -58,6 +59,7 @@
     <Button
         android:id="@+id/BtnVentaGasActivtiyCilindroConGas"
         style="@style/SagasTheme.Button"
+        android:background="@drawable/ripple_effect"
         android:layout_width="135dp"
         android:layout_height="68dp"
         android:layout_marginTop="8dp"
@@ -74,6 +76,7 @@
     <Button
         android:id="@+id/BtnVentaGasActivityCilindro"
         style="@style/SagasTheme.Button"
+        android:background="@drawable/ripple_effect"
         android:layout_width="135dp"
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
@@ -92,6 +95,7 @@
     <Button
         android:id="@+id/BtnVentaGasActivityOtros"
         style="@style/SagasTheme.Button"
+        android:background="@drawable/ripple_effect"
         android:layout_width="135dp"
         android:layout_height="70dp"
         android:layout_marginTop="8dp"
@@ -140,6 +144,7 @@
     <Button
         android:id="@+id/BtnVentagGasActivtyPagar"
         style="@style/SagasTheme.Button"
+        android:background="@drawable/ripple_effect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
