--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/formulario_venta_camioneta_y_pipa.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/formulario_venta_camioneta_y_pipa.xml
@@ -140,6 +140,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         style="@style/SagasTheme.Button"
+        android:background="@drawable/ripple_effect"
         android:text="@string/message_cancel"
         android:textColor="@color/colorTextButtonLogin"
         app:layout_constraintStart_toStartOf="parent"
@@ -153,6 +154,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         style="@style/SagasTheme.Button"
+        android:background="@drawable/ripple_effect"
         android:text="@string/pagar"
         android:textColor="@color/colorTextButtonLogin"
         app:layout_constraintEnd_toEndOf="parent"
